src/test/resources/purescript_examples/passing/NonOrphanInstanceMulti.purs.psi
Purescript File
  PsiElement(whitespace)('-- Both l and r must be known, thus can be in separate modules\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PSIdentifierImpl(identifier)
              PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Lib')
          PsiElement(whitespace)('\n')
      PSDataDeclarationImpl(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('L')
            PsiElement(whitespace)('\n')
        PSTypeArgsImpl(TypeArgs)
          <empty list>
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeInstanceDeclarationImpl(TypeInstanceDeclaration)
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(GenericIdentifier)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('clr')
            PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSQualifiedImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('C')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSTypeConstructorImpl(TypeConstructor)
            PSQualifiedImpl(Qualified)
              PSProperNameImpl(ProperName)
                PsiElement(proper name)('L')
                PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSTypeConstructorImpl(TypeConstructor)
            PSQualifiedImpl(Qualified)
              PSProperNameImpl(ProperName)
                PsiElement(proper name)('R')
                PsiElement(whitespace)('\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('main')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('log')
                  PsiElement(whitespace)(' ')
            PSStringLiteralImpl(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
